@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="generator" content="Docutils 0.17b2.dev: http://docutils.sourceforge.net/" />
 <title>Mathematics</title>
 <link rel="stylesheet" href="../input/data/minimal.css" type="text/css" />
